refactor: final form save split button uses final form api

--- a/packages/admin-stories/src/docs/components/Toolbar/Toolbar.stories.mdx
+++ b/packages/admin-stories/src/docs/components/Toolbar/Toolbar.stories.mdx
@@ -179,3 +179,13 @@ The Toolbar expands automatically if it needs more space
 <Canvas>
     <Story id="stories-components-toolbar-save-button--save" />
 </Canvas>
+
+### Final Form Save Split Button
+
+There is also a drop in Component (`FinalFormSaveSplitButton`) which automatically handles **saving** and **save and go back** inside a `Form` or `FinalForm` component.
+
+This component uses final form data (e.g. pristine, hasValidationErrors, submitting, hasSubmitErrors,...) for displaying stati (disabled, saving, saving successfully) and also handles back navigation on automatically
+
+<Canvas>
+    <Story id="stories-components-toolbar-final-form-save-split-button--final-form-save-split-button" />
+</Canvas>
