feat: switched back from npm 7 to yarn, for better workspace support

--- a/packages/admin-stories/src/docs/Intro.stories.mdx
+++ b/packages/admin-stories/src/docs/Intro.stories.mdx
@@ -15,8 +15,7 @@ Run `install.sh` once.
 ### Run build and storybook
 
 ```
-npm start
-npm run storybook
+yarn start
 ```
 
 ### Develop in an project
